--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
                                 <p>Calculator with basic calculator actions</p>
                             </div>
                         </div>
-                        <img src="img/portfolio/calc.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/tlist.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Calculator</h4>
-                        <p class="text-muted">Mobile Calculator application</p>
+                        <h4>T-list</h4>
+                        <p class="text-muted">Simple Task List Application</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
