Added tlist link

--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="https://appetize.io/app/rgq9b4hguwhjz2gpaadcmv352c" class="portfolio-link" data-toggle="modal">
+                    <a href="https://tlist.netlify.com/" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <p>Calculator with basic calculator actions</p>
+                                <p>Task list application where you can add, remove and delete/clear tasks</p>
                             </div>
                         </div>
                         <img src="img/portfolio/tlist.png" class="img-responsive" alt="">
