--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">My name is Alexona and I</div>
                 <div class="intro-heading">DESIGN & BUILD</div>
-                <div class="intro-lead-in">Web and mobile products</div>
+                <div class="intro-lead-in">Websites and web applications</div>
                 <a href="#portfolio" class="page-scroll btn btn-xl">See my work</a>
             </div>
         </div>
@@ -162,6 +162,20 @@
                         <p class="text-muted">Sage Design Website</p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="https://dsign.netlify.com" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                            <h4>Website for a Digital Agency</h4>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/dsign.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Dsign</h4>
+                        <p class="text-muted">Dsign Website</p>
+                    </div>
+                </div>
             
             </div>
         </div>
@@ -173,7 +187,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                    <h3 class="section-subheading text-muted">Hi,I am a Web and android Developer<br> who loves crafting beautiful web pages in<br> HTML5 and CSS3 and also enjoys building <br>android applications. I am an original<br>thinker using my skills in technology to<br> create unique products in the industry.</h3>
+                    <h3 class="section-subheading text-muted">Hi,I am a Web Developer<br> who loves crafting beautiful web pages in<br> HTML5 and CSS3 and also enjoys building <br>web applications. I am an original<br>thinker using my skills in technology to<br> create unique products in the industry.</h3>
                 </div>
             </div>
             <div class="row text-center">
